--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,10 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="purple">#8692F7</color>
+    <color name="light_gray">#F8F9FA</color>
+    <color name="dark_gray">#6C757D</color>
+    <color name="green">#28A745</color>
+    <color name="red">#DC3545</color>
+
+
 </resources>
