--- a/app/src/main/res/layout/fragment_home___vendor.xml
+++ b/app/src/main/res/layout/fragment_home___vendor.xml
@@ -48,7 +48,19 @@
         android:textSize="16sp"
         app:backgroundTint="@color/purple"
         app:cornerRadius="12dp" />
-
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btneditProduct"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="12dp"
+        android:text="Edit Product"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        app:backgroundTint="@color/purple"
+        app:cornerRadius="12dp"
+        android:layout_marginTop="240dp"/>
 
 
 </FrameLayout>
