--- a/app/src/main/res/layout/fragment__home_student.xml
+++ b/app/src/main/res/layout/fragment__home_student.xml
@@ -24,6 +24,18 @@
             android:drawablePadding="5dp"/>
 
         <!-- Popular Products Section -->
+        <TextView
+            android:id="@+id/no_results_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No products found"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:textColor="@android:color/darker_gray"
+            android:visibility="gone"
+            android:layout_marginTop="16dp"
+            />
+
 
 
         <androidx.recyclerview.widget.RecyclerView
