--- a/app/src/main/res/layout/activity_home_page_admin.xml
+++ b/app/src/main/res/layout/activity_home_page_admin.xml
@@ -2,34 +2,132 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".HomePageAdmin">
 
-    <Button
-        android:id="@+id/category_btn_admin"
-        android:layout_width="164dp"
-        android:layout_height="62dp"
-        android:text="ADD CATEGORY "
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.073" />
+    <!-- Profile Button (Circle) -->
 
-    <Button
-        android:id="@+id/logout_btn_admin"
-        android:layout_width="163dp"
-        android:layout_height="50dp"
-        android:text="LOGOUT"
-        android:textStyle="bold"
+    <!-- STUDENT -->
+    <ImageView
+        android:id="@+id/profile_icon"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="@drawable/circle_background"
+        android:clickable="true"
+        android:contentDescription="Profile"
+        android:focusable="true"
+        android:padding="8dp"
+        android:src="@drawable/baseline_profile_circle_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.062"
+        app:layout_constraintHorizontal_bias="0.978"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.192" />
+        app:layout_constraintVertical_bias="0.0" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_student"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/card_vendor"
+        app:layout_constraintBottom_toTopOf="@+id/card_delivery"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintVertical_weight="1">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="User"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+    </androidx.cardview.widget.CardView>
+
+    <!-- VENDOR -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_vendor"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_icon"
+        app:layout_constraintStart_toEndOf="@id/card_student"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/card_dashboard"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintVertical_weight="1">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Vendor"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+    </androidx.cardview.widget.CardView>
+
+    <!-- DELIVERY -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_delivery"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp"
+        app:layout_constraintTop_toBottomOf="@id/card_student"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/card_dashboard"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintVertical_weight="1">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Delivery"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+    </androidx.cardview.widget.CardView>
+
+    <!-- DASHBOARD -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_dashboard"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp"
+        app:layout_constraintTop_toBottomOf="@id/card_vendor"
+        app:layout_constraintStart_toEndOf="@id/card_delivery"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintVertical_weight="1">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Dashboard"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
