--- a/app/src/main/res/layout/fragment_home___vendor.xml
+++ b/app/src/main/res/layout/fragment_home___vendor.xml
@@ -20,16 +20,29 @@
         app:backgroundTint="@color/purple"
         app:cornerRadius="12dp"
         android:layout_marginTop="60dp"/>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnAddCategory"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="12dp"
+        android:text="Add Category"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        app:backgroundTint="@color/purple"
+        app:cornerRadius="12dp"
+        android:layout_marginTop="120dp"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/category_btn"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="180dp"
         android:paddingHorizontal="16dp"
         android:paddingVertical="12dp"
-        android:text="Category"
+        android:text="View Category"
         android:textColor="@android:color/white"
         android:textSize="16sp"
         app:backgroundTint="@color/purple"
@@ -40,7 +53,7 @@
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="240dp"
         android:paddingHorizontal="16dp"
         android:paddingVertical="12dp"
         android:text="Shop Address"
@@ -60,7 +73,7 @@
         android:textSize="16sp"
         app:backgroundTint="@color/purple"
         app:cornerRadius="12dp"
-        android:layout_marginTop="240dp"/>
+        android:layout_marginTop="300dp"/>
 
 
 </FrameLayout>
