paymentpage assignedorder updated delivery man data updated deliveryhompage login page updated adapter n model updates

--- a/app/src/main/res/layout/activity_delivery_details.xml
+++ b/app/src/main/res/layout/activity_delivery_details.xml
@@ -45,6 +45,12 @@
             android:layout_height="wrap_content"
             android:text="Start Delivery"
             android:layout_marginTop="24dp" />
+        <CheckBox
+            android:id="@+id/checkboxPicked"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="All Items Picked"
+            android:layout_marginTop="16dp" />
 
         <Button
             android:id="@+id/btnMarkDelivered"
