--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -12,14 +12,16 @@
         android:id="@+id/tv_order_confirmed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="172dp"
+        android:paddingTop="50dp"
         android:text="Order Confirmed!"
+        android:textColor="@android:color/holo_green_dark"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="@android:color/holo_green_dark"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:paddingTop="50dp" />
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_estimated_time"
@@ -36,19 +38,37 @@
         android:id="@+id/btn_go_home"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_marginTop="128dp"
         android:text="Go to Home"
-        app:layout_constraintTop_toBottomOf="@id/tv_estimated_time"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/btn_go_orders"
-        android:layout_margin="16dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_estimated_time" />
 
     <Button
         android:id="@+id/btn_go_orders"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_marginTop="128dp"
         android:text="Go to My Orders"
-        app:layout_constraintTop_toBottomOf="@id/tv_estimated_time"
-        app:layout_constraintStart_toEndOf="@id/btn_go_home"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp"/>
+        app:layout_constraintStart_toEndOf="@id/btn_go_home"
+        app:layout_constraintTop_toBottomOf="@id/tv_estimated_time" />
+
+    <TextView
+        android:id="@+id/tv_otp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="84dp"
+        android:paddingTop="20dp"
+        android:text="OTP: Loading..."
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_estimated_time" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
