--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -2,113 +2,104 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_gravity="center"
-    android:background="@drawable/loginpg"
-    tools:context=".MainActivity">
+    android:background="#F5CB58"
+    android:gravity="center">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="350dp"
-        android:layout_height="480dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="30dp"
-        android:background="@drawable/custom_edittext"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp">
+        android:layout_width="370dp"
+        android:layout_height="550dp"
 
-        <TextView
-            android:id="@+id/loginText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textColor="@color/purple"
-            android:text="Login"
-            android:layout_marginTop="20dp"
-            android:textSize="40sp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/Username"
-            android:layout_width="320dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="100dp"
-            android:layout_marginLeft="15dp"
-            android:background="@drawable/custom_edittext"
-            android:drawablePadding="8dp"
-            android:hint="User E-mail*"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textColorHighlight="@color/cardview_dark_background" />
-
-        <EditText
-            android:id="@+id/Password"
-            android:layout_width="320dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="170dp"
-            android:background="@drawable/custom_edittext"
-            android:drawablePadding="8dp"
-            android:hint="Password*"
-            android:inputType="textPassword"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textColorHighlight="@color/cardview_dark_background" />
-
-        <TextView
-            android:id="@+id/ForgotPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:text="Forgot Password?"
-            android:textSize="16sp"
-            android:textColor="@color/purple"
-            android:textStyle="bold"
-            android:layout_marginTop="225dp"
-            android:layout_marginLeft="200dp"
-            android:clickable="true"
-            android:focusable="true"/>
-
+        android:layout_margin="16dp"
+        android:background="@android:color/white"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="12dp">
 
         <LinearLayout
-            android:layout_width="349dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="24dp">
+
+            <TextView
+                android:id="@+id/loginText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="32dp"
+                android:gravity="center"
+                android:text="Log In"
+                android:textColor="@color/dark_brown"
+                android:textSize="36sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/Username"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/custom_edittext"
+                android:hint="User E-mail*"
+                android:inputType="textEmailAddress"
+                android:padding="12dp"
+                android:textColor="@color/black" />
+
+            <EditText
+                android:id="@+id/Password"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/custom_edittext"
+                android:hint="Password*"
+                android:inputType="textPassword"
+                android:padding="12dp"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/ForgotPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_gravity="end"
+                android:layout_marginBottom="24dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:text="Forgot Password?"
+                android:textColor="@color/dark_orange"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/Loginbutton"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:layout_marginTop="250dp"
+                android:layout_marginBottom="24dp"
                 android:backgroundTint="@color/purple"
                 android:text="Login"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
 
+            <TextView
+                android:id="@+id/signuptext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:gravity="center"
+                android:text="Not Registered Yet? SignUp Now"
+                android:textColor="@color/purple"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/Registerbutton"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginBottom="8dp"
+                android:backgroundTint="@color/purple"
+                android:text="Register"
+                android:textSize="18sp"
+                app:cornerRadius="20dp" />
+
         </LinearLayout>
-        <TextView
-            android:id="@+id/signuptext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textColor="@color/purple"
-            android:text="Not Registered Yet? SignUp Now"
-            android:layout_marginTop="350dp"
-            android:textSize="18sp"
-            />
-        <Button
-            android:id="@+id/Registerbutton"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="390dp"
-            android:backgroundTint="@color/purple"
-            android:text="Register"
-            android:textSize="18sp"
-            app:cornerRadius="20dp" />
     </androidx.cardview.widget.CardView>
 </LinearLayout>
