--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,80 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/main"
-android:background="@drawable/loginpg"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".LoginPage">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#EB4D22"
+    tools:context=".LoginPage">
 
+        <!-- Heart Logo -->
+        <ImageView
+            android:id="@+id/logoImage"
+            android:layout_width="165dp"
+            android:layout_height="194dp"
+            android:layout_marginTop="100dp"
+            android:src="@drawable/heartlogo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <!-- Tagline -->
+        <TextView
+            android:id="@+id/taglineText"
+            android:layout_width="265dp"
+            android:layout_height="64dp"
+            android:layout_marginTop="32dp"
+            android:gravity="center"
+            android:text="WE CONNECT PEOPLE WHO NEED THINGS TO\nTHE PEOPLE WHO WANT THINGS"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/logoImage" />
+
+        <!-- Sign In Button -->
+        <!-- Sign In Button (Yellow) -->
         <Button
             android:id="@+id/MainLoginButton"
-            android:layout_width="304dp"
+            android:layout_width="250dp"
             android:layout_height="50dp"
-            android:layout_marginStart="70dp"
-            android:layout_marginTop="90dp"
-            android:layout_marginEnd="70dp"
-            android:textSize="22dp"
-            android:text="Login"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.56"
+            android:text="Sign In"
+            android:textSize="18sp"
+            android:textColor="@color/dark_brown"
+            android:backgroundTint="@color/yellow"
+            app:layout_constraintTop_toBottomOf="@id/taglineText"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.791" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="80dp" />
 
+        <!-- Sign Up Button (Light Yellow) -->
         <Button
             android:id="@+id/MainRegisterButton"
-            android:layout_width="304dp"
+            android:layout_width="250dp"
             android:layout_height="50dp"
-            android:textSize="22dp"
-            android:text="Register"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.56"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="220dp"
-            android:layout_marginStart="70dp"
-            android:layout_marginEnd="70dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.939" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Have Account? Login"
+            android:text="Sign Up"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="60dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            android:textColor="@color/dark_orange"
+            android:backgroundTint="@color/light_yellow"
+            app:layout_constraintTop_toBottomOf="@id/MainLoginButton"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.706" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="20dp" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginTop="190dp"
-            android:text="Don't have account? Register"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.853" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
-
